--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.4",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "axios": "^1.5.1",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^5.14.12",
+    "axios": "^1.6.7",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.32.6",
-    "stylis": "^4.3.0",
+    "react-simple-keyboard": "^3.7.78",
+    "sharp": "^0.33.2",
+    "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.1.1",
-    "typescript": "5.1.6"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/node": "20.4.8",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "@types/stylis": "^4.2.4"
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.52",
+    "@types/react-dom": "18.2.18",
+    "@types/stylis": "^4.2.5"
   }
 }
